--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 
   </head>
   <body>
-  	<h1>Mandelbrot Set</h1>
-  	<div id = "canvasContainer"></div>
-	<div id = "controls">
-  		<span>Scale: </span><input id = "scale" type = "text" value = "3">
-    	<span> Center: X </span><input id = "centerX" type = "text" value = "-0.5">
-    	<span> Y </span><input id = "centerY" type = "text" value = "0">
-    	<br>
-    	<span>Iterations: </span><input id = "iter" type = "text" value = "50">
-    	<input id = "gen" type = "button" value = "Generate">
-    	<input id = "saveImage" type = "button" value = "Save Image">
+    <header>
+      <h1>Mandelbrot Set</h1>
+    </header>
+    <div id = "canvasContainer"></div>
+    <div id = "controls">
+      <span>Scale: </span><input id = "scale" type = "text" value = "3">
+      <span> Center: X </span><input id = "centerX" type = "text" value = "-0.5">
+      <span> Y </span><input id = "centerY" type = "text" value = "0">
+      <br>
+      <span>Iterations: </span><input id = "iter" type = "text" value = "50">
+      <input id = "gen" type = "button" value = "Generate">
+      <input id = "saveImage" type = "button" value = "Save Image">
     </div>
     <script src="sketch.js"> </script>
   </body>
