--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
-	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
+    <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
 
   </head>
   <body>
-    <header>
-      <h1>Mandelbrot Set</h1>
-    </header>
-    <div id = "canvasContainer"></div>
-    <div id = "controls">
-      <span>Scale: </span><input id = "scale" type = "text" value = "3">
-      <span> Center: X </span><input id = "centerX" type = "text" value = "-0.5">
-      <span> Y </span><input id = "centerY" type = "text" value = "0">
-      <br>
-      <span>Iterations: </span><input id = "iter" type = "text" value = "50">
-      <input id = "gen" type = "button" value = "Generate">
-      <input id = "saveImage" type = "button" value = "Save Image">
+  	<header>
+  		<h1>Mandelbrot Set</h1>
+  	</header>
+  	<div id = "canvasContainer"></div>
+	<div id = "controls">
+  		<span>Scale: </span><input id = "scale" type = "text" value = "3">
+    	<span> Center: X </span><input id = "centerX" type = "text" value = "-0.5">
+    	<span> Y </span><input id = "centerY" type = "text" value = "0">
+    	<br>
+    	<span>Iterations: </span><input id = "iter" type = "text" value = "50">
+    	<input id = "gen" type = "button" value = "Generate">
+    	<input id = "saveImage" type = "button" value = "Save Image">
     </div>
     <script src="sketch.js"> </script>
   </body>
