--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   </head>
   <body>
   	<header>
-  		<h1>Mandelbrot Set</h1>
+  		<h1>~ Mandelbrot Set ~</h1>
   	</header>
+    <hr>
   	<div id = "canvasContainer"></div>
 	<div id = "controls">
   		<div id="scaCenCont">
-  			<span>Scale: </span><input id = "scale" type = "text" value = "3">
+  			<span>Zoom: </span><input id = "scale" type = "text" value = "1/3">
 	    	<div id = "center">	
 	    		<div>	
 	    			<span> Center: X </span><input id = "centerX" type = "text" value = "-0.5">
@@ -28,10 +29,30 @@
 	   		</div>
 	 	</div>
     	<br>
-    	<span>Iterations: </span><input id = "iter" type = "text" value = "50">
-    	<input id = "gen" type = "button" value = "Generate">
-    	<input id = "saveImage" type = "button" value = "Save Image">
+      <span>Iterations: </span><input id = "iter" type = "text" value = "50">
+      <input id = "gen" type = "button" value = "Generate">
+      <input id = "saveImage" type = "button" value = "Save Image">
     </div>
+    <hr>
     <script src="sketch.js"> </script>
+    <div class = "instructionContainer">
+      <h2>~ What is this? ~</h2>
+      <p>This is a tool I made to observe and explore the <a href = "https://youtu.be/NGMRB4O922I">mandelbrot set!</a> You can watch a cool mandelbrot zoom video <a href = "https://youtu.be/PD2XgQOyCCk">here.</a></p>
+      <p>
+        Here's how you can use this tool to explore the complex plane yourself:-
+      </p>
+        <ul>
+          <li>Zoom: The bigger the number the more zoomed in/ magnified will be the image.</li>
+          <li>Center: Where are you zooming in to? The center. you can enter your desired co-ordinates manually, there are some really cool looking points you can look up on the internet. Alternatively you can click anywhere on the canvas and the co-ordinates of that point will automatically be entered for you.</li>
+          <li>Iterations: More the iterations, better the quality and accuracy of the image. But when you are zoomed out, a high iteration count will be an overkill, plus it takes longer to process. Start out with a low iteration count, and as you zoom in more increase it to get a clearer image. Take note that if you go above 1500-2000 it will take significantly longer to process the image.</li>
+        </ul>
+      <p>
+        You can download an image of your cool looking discovery by clicking on the save image button. Happy exploring! :)
+      </p>
+    </div>
+    <hr>
+    <footer>
+      <p><a href = ""> Source Code </a></p>
+    </footer>
   </body>
 </html>
