added link to source code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <hr>
     <footer>
-      <p><a href = ""> Source Code </a></p>
+      <p><a href = "https://github.com/Rossnhi/Mandelbrot-Set"> Source Code </a></p>
     </footer>
   </body>
 </html>
