--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     <hr>
   	<div id = "canvasContainer"></div>
 	<div id = "controls">
-  		<div id="scaCenCont">
-  			<span>Zoom: </span><input id = "scale" type = "text" value = "1/3">
-	    	<div id = "center">	
-	    		<div>	
-	    			<span> Center: X </span><input id = "centerX" type = "text" value = "-0.5">
-	    		</div>
-	    		<div>
-	    			<span> Y </span><input id = "centerY" type = "text" value = "0">
-	    		</div>
-	   		</div>
-	 	</div>
-    	<br>
-      <span>Iterations: </span><input id = "iter" type = "text" value = "20">
-      <input id = "gen" type = "button" value = "Generate">
-      <input id = "saveImage" type = "button" value = "Save Image">
+  	<div id="scaCenCont">
+  		<span>Zoom: </span><input id = "scale" type = "text" value = "0.333">
+	    <div id = "center">	
+	    	<div>	
+	    		<span> Center: X </span><input id = "centerX" type = "text" value = "-0.5">
+	    	</div>
+	    	<div>
+	    		<span> Y </span><input id = "centerY" type = "text" value = "0">
+	    	</div>
+	   	</div>
     </div>
+    <br>
+    <span>Iterations: </span><input id = "iter" type = "text" value = "20">
+    <input id = "gen" type = "button" value = "Generate">
+    <input id = "saveImage" type = "button" value = "Save Image">
+  </div>
     <hr>
     <script src="sketch.js"> </script>
     <div class = "instructionContainer">
