--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>~ Mandelbrot Set ~</h1>
     </header>
     <hr>
-    <div style="position: relative;">
+    <div id="menuIconContainer">
       <div id = "menuIcon" onClick = "popUp()">
         <div class="menuItem" id = "menuItem1"></div>
         <div class="menuItem" id = "menuItem2"></div>
